=====================

----------------------------------------------------------------------
Changes in Release 0.9.0
* Many, many changes to catch up with current Spec. 1.0 Proposed Final Draft
* "myfaces_WrapPageContext" config parameter abandoned (does not work with all
  JSP containers and is obsoltete with Tomcat 5)
* "myfaces_DefaultLanguage" config parameter abandoned (no longer needed)

----------------------------------------------------------------------
Changes in Release 0.4.4
* added "rendererType" attribute to tag library for all components.
* added RadioRenderer & selectone_radio tag (see carconfigurator example)
* new hack to make MyFaces more compatible (tags that extend UIComponentTag
  directly should work better)
* replaced the proprietary logging by jakarta commons logging
* convert/impl/DateConverter now parses with the "formatPattern" of the component
  if all other parsing attempts fail
* hyperlink-attributes where added to sortcolumn

----------------------------------------------------------------------
Changes in Release 0.4.3
* fixed a bug in the navigation menu: open/active state was lost sometimes.
* removed Attribute levelClasses from NavigationTag - see NavigationRenderer.indent(...)
* Replaced usages of ObjectInputStream by the new derived class
  MyFacesObjectInputStream to finally fix the JBoss Class.forName issue
  --> MyFaces now works in JBoss 3.2.1 (thanks to Robert Gothan!)
* TextRenderer: empty <span> element (span without attributes) is not rendered anymore
* New configuration option "defaultLanguage" in MyFacesConfig
* New Renderer "TabbedPane" that renderes a swing-like tabbed Pane (see examples).
* Rudimentary support for <jsp:include>. See known issues for details.
* fixed bug in ListRenderer: there was a bug when calculating actualRow

----------------------------------------------------------------------
Changes in Release 0.4.2
* Simple EL Support: For Tags derived from MyFacesTag you can use "${expr}"