@@ -1,1 +1,3 @@
 test.jsp
+A.inc
+B.inc
